--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Ramas de GIT</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex expedita officia, quisquam omnis aperiam, aspernatur tenetur voluptatem perspiciatis impedit qui quibusdam nostrum voluptates, dolores beatae perferendis sit ipsa autem vitae!</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex expedita officia, quisquam omnis aperiam, aspernatur tenetur 
+        voluptatem perspiciatis impedit qui quibusdam nostrum voluptates, dolores beatae perferendis sit ipsa autem vitae!</p>
+    <br>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus debitis dolor est quam facilis ut repellat magni nulla dicta sequi reprehenderit fuga molestiae amet et, quos perferendis neque, hic animi!</p>
 </body>
 </html>
