rama de desarrollo

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
         voluptatem perspiciatis impedit qui quibusdam nostrum voluptates, dolores beatae perferendis sit ipsa autem vitae!</p>
     <br>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus debitis dolor est quam facilis ut repellat magni nulla dicta sequi reprehenderit fuga molestiae amet et, quos perferendis neque, hic animi!</p>
+    <h2>Rama desarrollador</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, atque adipisci eligendi sunt veniam eveniet. Adipisci labore ab temporibus ipsam nulla numquam pariatur et commodi rerum non, autem sed quia?</p>
 </body>
 </html>
